# agent-cage

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: args.rs  cleanup-isolated-git-repo.sh  config.rs  defaults.yaml  engine.rs  main.rs  prepare-isolated-git-repo.sh  rel_provider.rs  utils.rs
