[package]
name = "agent-cage"
description = "Run your coding agent inside an isolated micro VM"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml", "serde_yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
